# habitos-familiares

./: .editorconfig  .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  GEMINI.md  README.md  ROADMAP.md  admin.html  admin.js  alembic.ini  app.js  build.sh  data.js  final_mypy.txt  final_pytest.txt  habitosfam.db-shm  habitosfam.db-wal  index.html  manifest.json  mypy_qc.txt  mypy_report.txt  package-lock.json  patch_db.py  pyproject.toml  pytest_final.txt  pytest_final_2.txt  pytest_qc.txt  render.yaml  requirements.txt  ruff.toml  ruff_qc.txt  ruff_report.txt  styles.css
backend/: GEMINI.md  __init__.py  backup.py  config.py  crud.py  data_config.py  database.py  final_mypy.txt  final_ruff.txt  main.py  models.py  schemas.py  test_api.py
backend/api/: __init__.py  admin.py  habits.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 1231155072f6_add_economy_fields_to_profile.py  v330_initial.py  (+1 more)
backend/tests/: test_functional.py  test_unit.py
docs/: AGENTS.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  FRONTEND_UI_DEFINITION.md  REWARDS_FLOW_DEFINITION.md  ROADMAP.md  SECURITY.md  TECHNICAL.md  TESTING_DESIGN.md  USER_GUIDE.md  USE_CASES.md  UX_IMPROVEMENTS_REQUIREMENTS.md  XP_TRACKER.md
frontend/: admin.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: admin.js  admin.ts  admin_main.ts  app.js  app.ts  data.ts  index_main.ts  types.ts
frontend/styles/: admin.css  styles.css
migrations/: alembic.ini  env.py
tests/: __init__.py  conftest.py  test_api.py
