[project]
name = "habitosfam"
version = "2.3.0"
description = "Sistema dinámico de seguimiento de hábitos familiares con FastAPI y Vanilla JS"
authors = [
    { name = "Jorge Arroyo Rivera", email = "familia.arroyo.rivera@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "asyncpg",
    "pymysql",
    "cryptography",
    "python-multipart"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "U", "S"]
ignore = ["S101", "B008"]

[tool.ruff.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
